RESOLVED FIXED146319
iOS speech synthesizer should expose names
https://bugs.webkit.org/show_bug.cgi?id=146319
Summary iOS speech synthesizer should expose names
chris fleizach
Reported 2015-06-25 12:33:10 PDT
The iOS Speech synthesizer integration should expose the names of the synthesizers <rdar://problem/21538631>
Attachments
patch (1.47 KB, patch)
2015-06-25 12:33 PDT, chris fleizach
no flags
patch (1.53 KB, patch)
2015-06-25 16:11 PDT, chris fleizach
no flags
patch (1.59 KB, patch)
2015-06-25 16:14 PDT, chris fleizach
no flags
patch (1.63 KB, patch)
2015-06-25 16:17 PDT, chris fleizach
mario: review+
chris fleizach
Comment 1 2015-06-25 12:33:55 PDT
WebKit Commit Bot
Comment 2 2015-06-25 12:36:31 PDT
Attachment 255566 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3 2015-06-25 14:29:34 PDT
Comment on attachment 255566 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=255566&action=review > Source/WebCore/platform/ios/PlatformSpeechSynthesizerIOS.mm:240 > // iOS Speech voices only expose their language as an identifying aspect. I feel like this comment just became outdated.
chris fleizach
Comment 4 2015-06-25 16:11:18 PDT
WebKit Commit Bot
Comment 5 2015-06-25 16:13:59 PDT
Attachment 255587 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
chris fleizach
Comment 6 2015-06-25 16:14:34 PDT
Created attachment 255588 [details] patch comment removed. thanks
WebKit Commit Bot
Comment 7 2015-06-25 16:17:02 PDT
Attachment 255588 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
chris fleizach
Comment 8 2015-06-25 16:17:12 PDT
Mario Sanchez Prada
Comment 9 2015-06-26 04:06:07 PDT
Comment on attachment 255590 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=255590&action=review > Source/WebCore/platform/ios/PlatformSpeechSynthesizerIOS.mm:240 > + Nit. I don't think you want this blank line here either :)
chris fleizach
Comment 10 2015-06-26 08:19:01 PDT
Note You need to log in before you can comment on or make changes to this bug.