iOS speech synthesizer should expose names https://bugs.webkit.org/show_bug.cgi?id=146319

Reviewed by Mario Sanchez Prada.

Use newer API to get the name and identifier of each voice asset.

* platform/ios/PlatformSpeechSynthesizerIOS.mm:
(WebCore::PlatformSpeechSynthesizer::initializeVoiceList):



Canonical link: https://commits.webkit.org/164430@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185997 268f45cc-cd09-0410-ab3c-d52691b4dbfc