Source/WebCore/platform/ios/PlatformSpeechSynthesizerIOS.mm
@@ -237,12 +237,15 @@ PlatformSpeechSynthesizer::~PlatformSpeechSynthesizer()
 void PlatformSpeechSynthesizer::initializeVoiceList()
 {
     for (AVSpeechSynthesisVoice *voice in [AVSpeechSynthesisVoiceClass speechVoices]) {
-        // iOS Speech voices only expose their language as an identifying aspect.
         NSString *language = [voice language];
+        bool isDefault = true;
+#if __IPHONE_OS_VERSION_MIN_REQUIRED >= 90000
+        NSString *voiceURI = [voice identifier];
+        NSString *name = [voice name];
+#else
         NSString *voiceURI = language;
         NSString *name = language;
-        bool isDefault = true;
-        
+#endif
         m_voiceList.append(PlatformSpeechSynthesisVoice::create(voiceURI, name, language, true, isDefault));
     }
 }
